# ros-Gazebo-URDF-Xacro

./: .gitignore  README.md
docs/: semantic_map.md  软件课程设计报告.docx
docs/data/semantic_map/: dtlane.csv  lane.csv  roadedge.csv
qt_app/: CMakeLists.txt  package.xml
qt_app/include/qt_app/: main_window.h  qros_node.h
qt_app/src/: main.cpp  main_window.cpp  qros_node.cpp
racecar_description/urdf/: racecar.urdf.xacro  temp_check.urdf  temp_for_check.urdf
racecar_gazebo/: CMakeLists.txt  package.xml
racecar_gazebo/config/: racecar_control.yaml
racecar_gazebo/config/navigation/: amcl.xml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
racecar_gazebo/launch/: autonomous_nav.launch  gmapping.launch  gmapping_demo.launch  hector1.launch  hector2.launch  hector_demo.launch  manual_drive.launch  navigation_only.launch  racecar.launch  racecar_navigation.launch  remap_brick_world.launch  slam_world.launch  wood_map.launch
racecar_gazebo/maps/: brick_map.pgm  brick_map.yaml  huge_map.yaml  map.pgm  map_gg.pgm  map_gg.yaml  map_hh.yaml  wood_map.pgm  wood_map.yaml
racecar_gazebo/rviz/: gmapping.rviz  half_gf.rviz  hector.rviz  huge_map.rviz  navigation.rviz
racecar_gazebo/scripts/: XL_controller_cmd.py  XL_keyboard_remote.py  racecar_navigation.py
racecar_gazebo/worlds/: brick_world.world  huge_world.world  racecar_runway.world  racecar_runway_original.world  wood_map.world
rf2o_laser_odometry/: CMakeLists.txt
rf2o_laser_odometry/launch/: rf2o_laser_odometry.launch
rf2o_laser_odometry/src/: CLaserOdometry2D.cpp  CLaserOdometry2DNode.cpp
simple_layers/: CMakeLists.txt  costmap_plugins.xml  package.xml
simple_layers/include/simple_layers/: simple_layer.h
simple_layers/src/: simple_layer.cpp
